All website structure elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="dist/js/out.js"></script>
     <link rel="stylesheet" href="dist/css/style.css">
     <title>CodersLab</title>
+    <script src="https://use.fontawesome.com/6a4eb0147d.js"></script>
     <!-- <script src="http://localhost:3001/livereload.js"></script>
      <link rel="stylesheet" href="css/main.css"> -->
 </head>
